fix before sempro

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -9,13 +9,6 @@
       rel="canonical"
       href="https://www.wrappixel.com/templates/adminpro/"
     />
-    <!-- Favicon icon -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../static/assets/images/favicon.png"
-    />
     <!-- Custom CSS -->
     <link
       href="../static/assets/libs/fullcalendar/dist/fullcalendar.min.css"
@@ -64,27 +57,17 @@
             <h4 class="text-muted mb-0 fw-normal">Selamat Datang di</h4>
             <h1 class="mb-0 fw-bold">Chatbot HaloSus</h1>
           </div>
-          <div class="
-              col-lg-4 col-md-6
-              d-none d-md-flex
-              align-items-center
-              justify-content-end
-            ">
-            <a href="javascript:void(0)" class="btn btn-info d-flex align-items-center ms-2">
-              Login
-            </a>
-          </div>
         </div>
       </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
                     <div style="margin-top: 130px; align-items: center; text-align: center;">
-                        <h1>fitur fitur yang kami tawarkan:</h1> 
+                        <h1>Fitur Fitur yang Kami Tawarkan:</h1> 
                         <ul>
                             <li> Deteksi Penyakit Berdasarkan Gejala</li>
                             <li> Tips Hidup Sehat </li>
-                            <li> Saran Lokasi Apotek terdekat </li>
+                            <li> Saran Lokasi Apotek Terdekat </li>
                         </ul>
                         <button class="btn-light-success" onclick="location.replace('/chat')">mulai chat</button>
                     </div>
