--- a/templates/index.html
+++ b/templates/index.html
@@ -15,45 +15,6 @@
   <style>
 
   </style>
-</head>
-
-<body >
-  <!-- partial:index.partial.html -->
-  <section class="msger">
-    <header class="msger-header">
-      <div class="msger-header-title">
-         Ruang Konsultasi
-      </div>
-    </header>
-
-    <main class="msger-chat" >
-      <div class="msg left-msg">
-        <div class="msg-img" style="background-image: url(../static/images/logoo.jpeg)"></div>
-
-        <div class="msg-bubble">
-          <div class="msg-info">
-            <div class="msg-info-name">Virtual Suster</div>
-            <div id="timenow" class="msg-info-time">12:45</div>
-          </div>
-          <div class="msg-text">
-            Hai, Selamat Datang di ruang konsultasi 😄, silahkan pilih layanan dibawah ini
-          </div>
-        </div>
-      </div>
-      <div class="msg-bubble">
-        <button type="button" id="deteksi">deteksi penyakit</button>
-        <button type="button"  id="tips">tips hidup sehat</button>
-        <button type="button" id="apotek">apotek terdekat</button>
-        </div>
-    </main>
-
-    <form class="msger-inputarea">
-      <input type="text" class="msger-input" id="textInput" name="pertanyaan" placeholder="Enter your message...">
-      <button id="send" type="submit" class="msger-send-btn">Send</button>
-    </form>
-  </section>
-  <!-- partial -->
-  <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
   <script>
     $(document).ready(function(){
 
@@ -124,20 +85,49 @@
 </div>
 `;
 
+msgerChat.insertAdjacentHTML("beforeend", msgHTML);
+msgerChat.scrollTop += 500;
+    }
+function appendMessageGmaps(name, img, side, text,link) {
+      //   Simple solution for small apps
+      const msgHTML = `
+<div class="msg ${side}-msg">
+  <div class="msg-img" style="background-image: url(${img})"></div>
+
+  <div class="msg-bubble">
+    <div class="msg-info">
+      <div class="msg-info-name">${name}</div>
+      <div class="msg-info-time">${formatDate(new Date())}</div>
+    </div>
+
+    <div class="msg-text">${text}<a style="text-decoration: underline;" href="${link}">${link}</a></div>
+  </div>
+</div>
+`;
+
       msgerChat.insertAdjacentHTML("beforeend", msgHTML);
       msgerChat.scrollTop += 500;
     }
-
+    function deteksi(){
+    
+  }
     function botResponse(rawText) {
-      $.get("http://127.0.0.1:5000/api/v1/model/predict", { pertanyaan: rawText }).done(function (data) {
+      $.get("/api/v1/model/predict", { pertanyaan: rawText }).done(function (data) {
         console.log(rawText);
         console.log(data[0]);
         const status = data[0].status;
         if(status === true){
         const msgText = data[0].jawaban;
         const msgsolusi = data[0].solusi;
+        const msgmaps = data[0].gmaps;
+        const msglink = data[0].link;
         appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
+        setTimeout(() => {
         appendMessage(BOT_NAME, BOT_IMG, "left", msgsolusi);
+        },500)
+        setTimeout(() => {
+        appendMessageGmaps(BOT_NAME, BOT_IMG, "left", msgmaps, msglink);
+        },700)
         }
         else{
         const statusText = data[0].deskripsi;
@@ -158,49 +148,89 @@
 
       return `${h.slice(-2)}:${m.slice(-2)}`;
     }
-  })
-  function deteksi(){
+    
+  $('#deteksi').click(function(){
     const msgText = "deteksi penyakit";
     appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
     msgerInput.value = "";
-  }
-  $('#deteksi').attr('onclick',  function tips(){
-    const msgText = "deteksi penyakit";
-    var name = PERSON_NAME;
-    var img = PERSON_IMG ;
-    var text =msgText;
-    var side = "right";
-         const msgHTML = `
-<div class="msg ${side}-msg">
-  <div class="msg-img" style="background-image: url(${img})"></div>
-
-  <div class="msg-bubble">
-    <div class="msg-info">
-      <div class="msg-info-name">${name}</div>
-      <div class="msg-info-time">${formatDate(new Date())}</div>
-    </div>
-
-    <div class="msg-text">${text}</div>
-  </div>
-</div>
-`;
-
-      msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-      msgerChat.scrollTop += 500;
-    msgerInput.value = "";
+    setTimeout(() => {
+    const msgTextbot = "silahkan sebutkan gejala gejala yang anda alami";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot);
+  },500)
   })
 
-  $('#tips').attr('onclick',apotek())
-  function apotek(){
+  $('#apotek').click(function(){
     const msgText = "apotek terdekat";
     appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
     msgerInput.value = "";
     setTimeout(() => {
-      window.location("https://www.google.com/maps/search/Apotek/")
-    }, 100);
-  }
-  $('#apotek').attr('onclick',apotek())
+    const msgTextbot = "silahkan tunggu sebentar";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot)
+    },500)
+    setTimeout(() => {
+      window.location.replace("https://www.google.com/maps/search/Apotek/")
+    }, 700)
+  })
+  })
+ 
 </script>
+</head>
+
+<body >
+  <!-- partial:index.partial.html -->
+  <section class="msger">
+    <header class="msger-header">
+      <div class="msger-header-title">
+         Ruang Konsultasi
+      </div>
+    </header>
+
+    <main class="msger-chat" >
+      <div class="msg left-msg">
+        <div class="msg-img" style="background-image: url(../static/images/logoo.jpeg)"></div>
+
+        <div class="msg-bubble">
+          <div class="msg-info">
+            <div class="msg-info-name">Virtual Suster</div>
+            <div id="timenow" class="msg-info-time">12:45</div>
+          </div>
+          <div class="msg-text">
+            Hai, Selamat Datang di ruang konsultasi 😄, silahkan pilih layanan dibawah ini
+          </div>
+        </div>
+      </div>
+      <div class="msg-bubble"><div class="msg-bubble">
+        <div class="msg-info">
+          <div class="msg-info-name"></div>
+          <div class="msg-info-time"></div>
+          <div id="deteksi" class="msg-text" ><h3> deteksi penyakit</h3></div>
+        </div>
+        </div><div class="msg-bubble">
+          <div class="msg-info">
+            <div class="msg-info-name"></div>
+            <div class="msg-info-time"></div>
+            <div id="tips" class="msg-text">tips hidup sehat</div>
+          </div>
+          </div><div class="msg-bubble">
+            <div class="msg-info">
+              <div class="msg-info-name"></div>
+              <div class="msg-info-time"></div>
+            </div>
+            
+            <div id="apotek" class="msg-text">apotek terdekat </div>
+
+            </div>
+        </div>
+    </main>
+
+    <form class="msger-inputarea">
+      <input type="text" class="msger-input" id="textInput" name="pertanyaan" placeholder="Enter your message...">
+      <button id="send" type="submit" class="msger-send-btn">Send</button>
+    </form>
+  </section>
+  <!-- partial -->
+  <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
+  
 </body>
 </html>
 
