--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -13,8 +13,89 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <style>
-
+    .btn-light-success {
+    font-size: 1.5rem!important;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #dffff1;
+    border-color: #dffff1;
+    color:#39cb7f;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-success>.text-center {
+    color: #39cb7f;;
+}
+.btn-light-success:hover, .btn-light-success:focus {
+    font-size: 1.5rem!important;
+    cursor: pointer;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #39cb7f;;
+    border-color: #dffff1;
+    color: #dffff1;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-success:hover>.text-center {
+    color: #fff;
+}
+.btn-light-info {
+    font-size: 1.5rem!important;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #dfebff;
+    border-color: #dff2ff;
+    color:#3971cb;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-info>.text-center {
+    color: #396fcb;;
+}
+.btn-light-info:hover, .btn-light-info:focus {
+    font-size: 1.5rem!important;
+    cursor: pointer;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #3976cb;;
+    border-color: #dfefff;
+    color: #dff7ff;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-info:hover>.text-center {
+    color: #fff;
+}
+.btn-light-danger {
+    font-size: 1.5rem!important;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #ffdfdf;
+    border-color: #ffdfdf;
+    color:#cb3939;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-danger>.text-center {
+    color: #cb3939;;
+}
+.btn-light-danger:hover, .btn-light-danger:focus {
+    font-size: 1.5rem!important;
+    cursor: pointer;
+    border: 1px solid transparent; 
+    border-radius: 5px; 
+    padding: 8px 14px; 
+    background-color: #cb3939;;
+    border-color: #ffdfdf;
+    color: #ffdfdf;
+    box-shadow: 0 1px 0 rgb(255 255 255 / 15%);
+}
+.btn-light-danger:hover>.text-center {
+    color: #fff;
+}
   </style>
+ 
 </head>
 
 <body >
@@ -40,10 +121,11 @@
           </div>
         </div>
       </div>
-      <div class="msg-bubble">
-        <button type="button" id="deteksi">deteksi penyakit</button>
-        <button type="button"  id="tips">tips hidup sehat</button>
-        <button type="button" id="apotek">apotek terdekat</button>
+
+      <div class="msg-bubble" style="margin-left: 56px;">
+        <button id="deteksi" class="btn-light-success">deteksi penyakit</button>
+        <button id="tips" class="btn-light-info" >tips hidup sehat</button>
+        <button id="apotek" class="btn-light-danger" >apotek terdekat</button>
         </div>
     </main>
 
@@ -61,6 +143,7 @@
     const msgerInput = get(".msger-input");
     const msgerChat = get(".msger-chat");
     const TimeNow = get("#timenow");
+      var pilihan = ''
     $('#timenow').text(formatDate(new Date()))
     // Icons made by Freepik from www.flaticon.com
     var BOT_IMG = "";
@@ -105,9 +188,50 @@
 
       appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
       msgerInput.value = "";
-      botResponse(msgText);
+      if (msgText=="Random Question"){
+          pilihan='Random Question'
+          appendMessage(BOT_NAME, BOT_IMG, "left", "Mengalihkan Mode Ke ChatGPT ... ");
+          appendMessage(BOT_NAME, BOT_IMG, "left", "Untuk kembali ke Mode Deteksi klik tombol deteksi di chat paling atas atau ketik deteksi penyakit");
+          appendMessage(BOT_NAME, BOT_IMG, "left", "Silahkan tanya apa saja diluar konteks gejala dan penyakit");
+      }
+      else if(msgText=="deteksi penyakit"){
+          pilihan='deteksi penyakit'
+          appendMessage(BOT_NAME, BOT_IMG, "left", "Mengalihkan Mode Ke Deteksi ... ");
+          appendMessage(BOT_NAME, BOT_IMG, "left", "silahkan sebutkan gejala gejala yang anda alami")
+      }
+      else{
+          botResponse(msgText,pilihan);
+      }
+      // var lastmsg = document.querySelectorAll(".msg-text:last-child").value;
+      
     });
     function appendMessage(name, img, side, text) {
+      //   Simple solution for small apps
+    var arr = [1, 2, 3, 4];
+    var rand = Math.random();
+    rand *= arr.length;
+    rand = Math.floor(rand);
+      const msgHTML = `
+<div class="msg ${side}-msg">
+  <div class="msg-img" style="background-image: url(${img})"></div>
+
+  <div class="msg-bubble">
+    <div class="msg-info">
+      <div class="msg-info-name">${name}</div>
+      <div class="msg-info-time">${formatDate(new Date())}</div>
+    </div>
+
+    <div class="msg-text"id="${rand}">${text}</div>
+  </div>
+</div>
+`;
+msgerChat.insertAdjacentHTML("beforeend", msgHTML);
+msgerChat.scrollTop += 500;
+if(side=="left"){
+//typeWriter(text,rand)
+}
+}
+function appendMessageGmaps(name, img, side, text,link) {
       //   Simple solution for small apps
       const msgHTML = `
 <div class="msg ${side}-msg">
@@ -119,34 +243,72 @@
       <div class="msg-info-time">${formatDate(new Date())}</div>
     </div>
 
-    <div class="msg-text">${text}</div>
+    <div class="msg-text">${text}<a style="text-decoration: underline;" href="${link}">${link}</a></div>
   </div>
 </div>
 `;
 
+
       msgerChat.insertAdjacentHTML("beforeend", msgHTML);
       msgerChat.scrollTop += 500;
     }
-
-    function botResponse(rawText) {
-      $.get("http://127.0.0.1:5000/api/v1/model/predict", { pertanyaan: rawText }).done(function (data) {
-        console.log(rawText);
-        console.log(data[0]);
-        const status = data[0].status;
-        if(status === true){
-        const msgText = data[0].jawaban;
-        const msgsolusi = data[0].solusi;
-        appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-        appendMessage(BOT_NAME, BOT_IMG, "left", msgsolusi);
-        }
-        else{
-        const statusText = data[0].deskripsi;
-        appendMessage(BOT_NAME, BOT_IMG, "left", statusText);
-        }
- 
-      });
+    function deteksi(){
+    
+  }
+function typeWriter(txt,rand) {
+  var i = 0;
+var speed = 50;
+console.log(txt)
+console.log(txt.length)
+  if (i < txt.length) {
+    console.log(txt.charAt(i))
+    document.getElementById(rand).innerHTML += txt.charAt(i);
+    console.log(document.getElementById(rand).innerHTML += txt.charAt(i))
+    i++;
+    setTimeout(typeWriter, speed);
+  }
 }
-
+    function botResponse(rawText,pilihan) {
+      console.log(pilihan)
+      const pertanyaan = rawText.toLowerCase();
+      if (pilihan=="Random Question"){
+        $.get("/api/v1/chatgpt/predict", { pertanyaan: pertanyaan }).done(function (data) {
+          console.log(rawText);
+          console.log(data);
+          const msgText= data;
+          setTimeout(() => {
+          appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
+          },500)
+          
+  
+        });
+      }
+      else{
+        $.get("/api/v1/model/predict", { pertanyaan: pertanyaan }).done(function (data) {
+          console.log(rawText);
+          console.log(data[0]);
+          const status = data[0].status;
+          if(status === true){
+          const msgText = data[0].jawaban;
+          const msgsolusi = data[0].solusi;
+          const msgmaps = data[0].gmaps;
+          const msglink = data[0].link;
+          appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
+          setTimeout(() => {
+          appendMessage(BOT_NAME, BOT_IMG, "left", msgsolusi);
+          },500)
+          setTimeout(() => {
+          appendMessageGmaps(BOT_NAME, BOT_IMG, "left", msgmaps, msglink);
+          },700)
+          }
+          else{
+          const statusText = data[0].deskripsi;
+          appendMessage(BOT_NAME, BOT_IMG, "left", statusText);
+          }
+  
+        });
+      }
+    }
     // Utils
     function get(selector, root = document) {
       return root.querySelector(selector);
@@ -158,54 +320,58 @@
 
       return `${h.slice(-2)}:${m.slice(-2)}`;
     }
-  })
-  function deteksi(){
+    
+  $('#deteksi').click(function(){
     const msgText = "deteksi penyakit";
     appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
     msgerInput.value = "";
-  }
-  $('#deteksi').attr('onclick',  function tips(){
-    const msgText = "deteksi penyakit";
-    var name = PERSON_NAME;
-    var img = PERSON_IMG ;
-    var text =msgText;
-    var side = "right";
-         const msgHTML = `
-<div class="msg ${side}-msg">
-  <div class="msg-img" style="background-image: url(${img})"></div>
-
-  <div class="msg-bubble">
-    <div class="msg-info">
-      <div class="msg-info-name">${name}</div>
-      <div class="msg-info-time">${formatDate(new Date())}</div>
-    </div>
-
-    <div class="msg-text">${text}</div>
-  </div>
-</div>
-`;
-
-      msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-      msgerChat.scrollTop += 500;
-    msgerInput.value = "";
+    setTimeout(() => {
+    const msgTextbot = "silahkan sebutkan gejala gejala yang anda alami";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot);
+  },500)
   })
 
-  $('#tips').attr('onclick',apotek())
-  function apotek(){
+  $('#apotek').click(function(){
     const msgText = "apotek terdekat";
     appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
     msgerInput.value = "";
     setTimeout(() => {
-      window.location("https://www.google.com/maps/search/Apotek/")
-    }, 100);
-  }
-  $('#apotek').attr('onclick',apotek())
+    const msgTextbot = "silahkan tunggu sebentar";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot)
+    },500)
+    setTimeout(() => {
+      window.location.href ="https://www.google.com/maps/search/Apotek/"
+    }, 700)
+  })
+  $('#tips').click(function(){
+    const msgText = "apotek terdekat";
+    appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
+    msgerInput.value = "";
+    setTimeout(() => {
+    const msgTextbot = "silahkan tunggu sebentar";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot)
+    },500)
+    setTimeout(() => {
+      window.location.href ="/tips"
+    }, 700)
+  })
+  $('#random-question').click(function(){
+    const msgText = "Random Question";
+    appendMessage(PERSON_NAME, PERSON_IMG, "right", msgText);
+    msgerInput.value = "";
+    setTimeout(() => {
+    const msgTextbot = "silahkan tanya apa saja diluar konteks gejala dan penyakit";
+    appendMessage(BOT_NAME,BOT_IMG, "left", msgTextbot)
+    },500)
+    setTimeout(() => {
+      pilihan="Random Question"
+      botResponse(pilihan);
+    }, 700)
+  })
+  })
+  
+ 
 </script>
-</body>
-</html>
-
-
-  </script>
 
 </body>
 
