--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
               align-items-center
               justify-content-end
             ">
-            <a href="/input-dokter" class="btn btn-info d-flex align-items-center ms-2">
+            <a href="/login" class="btn btn-info d-flex align-items-center ms-2">
               Login Dokter
             </a>
           </div>
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-lg-6" style="">
                     <div style="margin-top: 130px; margin-left: 200px;">
-                        <h1>Fitur Fitur yang kami tawarkan:</h1> 
+                        <h1>fitur fitur yang kami tawarkan:</h1> 
                         <br>
                         <ul style="text-decoration: none;">
                             <li> Deteksi Penyakit Berdasarkan Gejala</li>
