--- a/application/templates/tips.html
+++ b/application/templates/tips.html
@@ -60,11 +60,11 @@
         </div>
       </div>
     <div class="container-fluid">
-        <ul>
+      <h2>{{ title }}</h2>
         {% for i in data %}
-            <li>{{ i }}</li>
+            <p>{{ i }}</p>
         {% endfor %}
-    </ul>
+        <p>sumber : <a href="{{ sumber }}">{{ sumber }}</a></p>
     </div>
 </div>
 
