--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,12 +1,343 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="wrappixel, admin dashboard, html css dashboard, web dashboard, bootstrap 5 admin, bootstrap 5, css3 dashboard, bootstrap 5 dashboard, FlexileDash bootstrap dashboard admin bootstrap 5 dashboard, frontend, responsive bootstrap 5 admin template, material design, FlexileDash bootstrap 5 dashboard template"
+    />
+    <meta
+      name="description"
+      content="FlexileDash bootstrap dashboard is powerful and clean admin dashboard template"
+    />
+    <meta name="robots" content="noindex,nofollow" />
+    <title>Login - HaloSus</title>
+    <link
+      rel="canonical"
+      href="https://www.wrappixel.com/templates/adminpro/"
+    />
+    <!-- Favicon icon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../static/assets/images/favicon.png"
+    />
+    <!-- Custom CSS -->
+    <link href="../static/assets/dist/css/style.min.css" rel="stylesheet" />
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <div class="main-wrapper">
+      <!-- Login box.scss -->
+      <!-- ============================================================= -->
+      <div class="row auth-wrapper gx-0">
+        <div class="col-lg-4 col-xl-3 bg-primary auth-box-2 on-sidebar">
+          <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="row justify-content-center text-center">
+              <div class="col-md-7 col-lg-12 col-xl-9">
+                <div>
+                  <span class="db"
+                    ><img src="../static/images/icon_sus.png" style="width: 100px;height: 100px;" alt="logo"
+                  /></span>
+                </div>
+                <h2 class="text-white mt-4 fw-light">
+                  <span class="font-weight-medium">H</span>alo<span class="font-weight-medium">S</span>us
+                </h2>
+                <p class="op-5 text-white fs-4 mt-4">
+                  bioinformatics : chatbot deasess prediction by symtomph with BERT (BIODIECTIONAL ENCODER FROM TRANSFORMERS)
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            col-lg-8 col-xl-9
+            d-flex
+            align-items-center
+            justify-content-center
+          "
+        >
+          <div class="row justify-content-center w-100 mt-4 mt-lg-0">
+            <div class="col-lg-6 col-xl-3 col-md-7">
+              <div class="card" id="registerform">
+                <div class="card-body">
+                  <h2>Sign Up Form</h2>
+                  <p class="text-muted fs-4">
+                    Enter given details for new account
+                  </p>
+                  <form
+                    class="form-horizontal mt-4 pt-4 needs-validation"
+                    novalidate
+                    action="index.html"
+                  >
+                    <div class="form-floating mb-3">
+                      <input
+                        type="text"
+                        class="form-control form-input-bg"
+                        id="tb-rfname"
+                        placeholder="john deo"
+                        required
+                      />
+                      <label for="tb-rfname">Full Name</label>
+                      <div class="invalid-feedback">Full name is required</div>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input
+                        type="email"
+                        class="form-control form-input-bg"
+                        id="tb-remail"
+                        placeholder="john@gmail.com"
+                        required
+                      />
+                      <label for="tb-remail">Email</label>
+                      <div class="invalid-feedback">Email is required</div>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input
+                        type="password"
+                        class="form-control form-input-bg"
+                        id="text-rpassword"
+                        placeholder="*****"
+                        required
+                      />
+                      <label for="text-rpassword">Password</label>
+                      <div class="invalid-feedback">Password is required</div>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input
+                        type="password"
+                        class="form-control form-input-bg"
+                        id="text-rcpassword"
+                        placeholder="*****"
+                        required
+                      />
+                      <label for="text-rcpassword">Confirm Password</label>
+                      <div class="invalid-feedback">Password is required</div>
+                    </div>
+                    <div class="form-check mb-4 pb-2">
+                      <input
+                        class="form-check-input"
+                        type="checkbox"
+                        value=""
+                        id="r-me"
+                        required
+                      />
+                      <label class="form-check-label" for="r-me">
+                        Remember me
+                      </label>
+                      <div class="invalid-feedback">
+                        You must agree before submitting.
+                      </div>
+                    </div>
+                    <div class="d-flex align-items-stretch button-group">
+                      <button type="submit" class="btn btn-primary btn-lg px-4">
+                        Submit
+                      </button>
+                      <a
+                        href="javascript:void(0)"
+                        id="to-login2"
+                        class="
+                          btn btn-lg btn-light-secondary
+                          text-secondary
+                          font-weight-medium
+                        "
+                        >Cancel</a
+                      >
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="card" id="loginform">
+                <div class="card-body">
+                  <h2>Welcome to Material Ui</h2>
+                  <p class="text-muted fs-4">
+                    New Here?
+                    <a href="javascript:void(0)" id="to-register"
+                      >Create an account</a
+                    >
+                  </p>
+                  <form
+                    class="form-horizontal mt-4 pt-4 needs-validation"
+                    novalidate
+                    action="index.html"
+                  >
+                    <div class="form-floating mb-3">
+                      <input
+                        type="text"
+                        class="form-control form-input-bg"
+                        id="tb-email"
+                        placeholder="blbla"
+                        required
+                      />
+                      <label for="tb-email">Username</label>
+                      <div class="invalid-feedback">Username is required</div>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                      <input
+                        type="password"
+                        class="form-control form-input-bg"
+                        id="text-password"
+                        placeholder="*****"
+                        required
+                      />
+                      <label for="text-password">Password</label>
+                      <div class="invalid-feedback">Password is required</div>
+                    </div>
+
+                    <div class="d-flex align-items-center mb-3">
+                      <div class="form-check">
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="r-me1"
+                          required
+                        />
+                        <label class="form-check-label" for="r-me1">
+                          Remember me
+                        </label>
+                        <div class="invalid-feedback">
+                          You must agree before submitting.
+                        </div>
+                      </div>
+                      <div class="ms-auto">
+                        <a
+                          href="javascript:void(0)"
+                          id="to-recover"
+                          class="fw-bold"
+                          >Forgot Password?</a
+                        >
+                      </div>
+                    </div>
+                    <div
+                      class="d-flex align-items-stretch button-group mt-4 pt-2"
+                    >
+                      <button type="submit" class="btn btn-primary btn-lg px-4">
+                        Sign in
+                      </button>
+                     
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="card" id="recoverform">
+                <div class="card-body">
+                  <div class="logo">
+                    <h3>Recover Password</h3>
+                    <p class="text-muted fs-4">
+                      Enter your Email and instructions will be sent to you!
+                    </p>
+                  </div>
+                  <div class="mt-4 pt-4">
+                    <!-- Form -->
+                    <form action="index.html">
+                      <!-- email -->
+                      <div class="mb-4 pb-2">
+                        <div class="form-floating">
+                          <input
+                            class="form-control form-input-bg"
+                            type="email"
+                            required=""
+                            placeholder="Email address"
+                          />
+                          <label for="tb-email">Email</label>
+                        </div>
+                      </div>
+                      <div class="d-flex align-items-stretch button-group">
+                        <button
+                          type="submit"
+                          class="btn btn-primary btn-lg px-4"
+                        >
+                          Submit
+                        </button>
+                        <a
+                          href="javascript:void(0)"
+                          id="to-login"
+                          class="
+                            btn btn-lg btn-light-secondary
+                            text-secondary
+                            font-weight-medium
+                          "
+                          >Cancel</a
+                        >
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ============================================================= -->
+      <!-- Login box.scss -->
+      <!-- ============================================================= -->
+    </div>
+    <!-- ============================================================= -->
+    <!-- All Required js -->
+    <!-- ============================================================= -->
+    <script src="../static/assets/libs/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap tether Core JavaScript -->
+    <script src="../static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // ---------------------------
+      // Login and Recover Password
+      // ---------------------------
+      $("#to-recover").on("click", function () {
+        $("#loginform").hide();
+        $("#recoverform").fadeIn();
+      });
+
+      $("#to-login").on("click", function () {
+        $("#loginform").fadeIn();
+        $("#recoverform").hide();
+      });
+
+      $("#to-register").on("click", function () {
+        $("#loginform").hide();
+        $("#registerform").fadeIn();
+      });
+
+      $("#to-login2").on("click", function () {
+        $("#loginform").fadeIn();
+        $("#registerform").hide();
+      });
+
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll(".needs-validation");
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms).forEach(function (form) {
+          form.addEventListener(
+            "submit",
+            function (event) {
+              if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        });
+      })();
+    </script>
+  </body>
 </html>
