--- a/application/templates/landingpage.html
+++ b/application/templates/landingpage.html
@@ -62,7 +62,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-6 col-12 align-self-center">
             <h4 class="text-muted mb-0 fw-normal">Selamat Datang di</h4>
-            <h1 class="mb-0 fw-bold">Chatbot HaloSus</h1>
+            <h1 class="mb-0 fw-bold">Chatbot HaiSus</h1>
           </div>
           <div class="
               col-lg-4 col-md-6
