--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -14,7 +14,7 @@
       content="FlexileDash bootstrap dashboard is powerful and clean admin dashboard template"
     />
     <meta name="robots" content="noindex,nofollow" />
-    <title>Login - HaloSus</title>
+    <title>Login - HaiSus</title>
     <link
       rel="canonical"
       href="https://www.wrappixel.com/templates/adminpro/"
