--- a/application/templates/authentication-login3.html
+++ b/application/templates/authentication-login3.html
@@ -24,7 +24,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../../assets/images/icon_aplikasi.jpg"
     />
     <!-- Custom CSS -->
     <link href="../../dist/css/style.min.css" rel="stylesheet" />
