--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -10,7 +10,13 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script> 
+  <link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="../static/assets/images/icon_aplikasi.jpg"
+/>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <style>
     .btn-light-success {
