--- a/application/templates/tips.html
+++ b/application/templates/tips.html
@@ -9,6 +9,12 @@
       rel="canonical"
       href="https://www.wrappixel.com/templates/adminpro/"
     />
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="../static/assets/images/icon_aplikasi.jpg"
+  />
     <!-- Custom CSS -->
     <link
       href="../static/assets/libs/fullcalendar/dist/fullcalendar.min.css"
