--- a/application/templates/landingpage.html
+++ b/application/templates/landingpage.html
@@ -14,7 +14,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../static/images/favicon.png"
+      href="../static/images/icon_aplikasi.jpg"
     />
     <!-- Custom CSS -->
     <link
