--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -24,7 +24,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../static/assets/images/favicon.png"
+      href="../static/assets/images/icon_aplikasi.jpg"
     />
     <!-- Custom CSS -->
     <link href="../static/assets/dist/css/style.min.css" rel="stylesheet" />
