revisi after sidang

--- a/application/templates/authentication-login3.html
+++ b/application/templates/authentication-login3.html
@@ -227,7 +227,7 @@
                   <form
                     class="form-horizontal mt-4 pt-4 needs-validation"
                     novalidate
-                    action="index.html"
+                    action="/ac"
                   >
                     <div class="form-floating mb-3">
                       <input
