--- a/application/templates/tips.html
+++ b/application/templates/tips.html
@@ -67,9 +67,7 @@
       </div>
     <div class="container-fluid">
       <h2>{{ title }}</h2>
-        {% for i in data %}
-            <p>{{ i }}</p>
-        {% endfor %}
+        <p>{{ data }}</p>
         <p>sumber : <a href="{{ sumber }}">{{ sumber }}</a></p>
     </div>
 </div>
